# cargo-xfmt

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/exec/: cargo_fmt.rs  rustfmt.rs  rustfmt_stdio.rs
src/platform/: rustfmt_toml.rs
